<resources>
    <string name="app_name">My Application</string>
    <string name="input_complex">نام مجتمع مرد نظر را وارد کنید</string>
    <string name="input_username_password">لطفا نام کاربری و رمز عبور خود را برای ورود به سیستم وارد کنید</string>
    <string name="enter">ورود</string>
    <string name="search_new_complex">جستجوی مجتمع جدید</string>
    <string name="fotgot_password">فراموش کردن پسورد</string>
    <string name="welcome_text">ورود به سامانه مشترکین</string>
    <string name="get_password">دریافت رمز عبور</string>
    <string name="forgot_password_description">نام کاربری و 4 رقم آخر موبایل خود را وارد کنید تا در اولین فرصت رمز عبور برای شما از طریق پیام کوتاه ارسال شود</string>
    <string name="last_four_digits">چهار رقم آخر موبایل</string>
    <string name="user_name">نام کاربری</string>
    <string name="req_password">درخواست رمز عبور</string>
    <string name="back">بازگشت</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_settings">Settings</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="hello"><![CDATA[<b>The Awesome Sliding Up Panel</b><br/> Brought to you by<br/><a href="http://umanoapp.com">http://umanoapp.com</a>]]></string>
    <string name="follow"><![CDATA[Follow us<br/>on <a href="http://twitter.com/umanoapp">Twitter</a>]]></string>
</resources>
